--- a/source/sections/search.scss
+++ b/source/sections/search.scss
@@ -12,7 +12,9 @@
         @include full;
         background-image: radial-gradient(var(--green) 0.5px, transparent 0.5px), radial-gradient(var(--green) 0.5px, var(--off-white) 0.5px);
         background-size: 20px 20px;
-        background-position: 0 0, 10px 10px;
+        background-position:
+            0 0,
+            10px 10px;
         opacity: 0.7;
         transition: all $fast;
         opacity: 0;
@@ -48,14 +50,14 @@
         position: absolute;
         right: 1.5rem;
         top: 1.5rem;
-        z-index: 3;
+        z-index: 88;
         transition: all $fast;
         opacity: 0;
         transform: scale(0.8);
         transition-delay: 0ms;
 
-        path{
-            fill:var(--green)
+        path {
+            fill: var(--green);
         }
     }
 
@@ -148,6 +150,7 @@
 .search-pane-results-grid {
     display: flex;
     flex-wrap: wrap;
+    margin: -2rem -2rem 2rem;
 
     &__no-results {
         text-align: center;
