--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -132,9 +132,12 @@
 
       {{ content_for_layout }}
     </div>
+
     {% comment %}
       Side cart
     {% endcomment %}
     {% section 'sidecart' %}
+
+    {% section 'footer' %}
   </body>
 </html>
