--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -11,13 +11,13 @@
     {% endcomment %}
     <div class="header-nav">
       <div class="header-nav__item">
-        <a href="/collections/all" class="header-nav__item__link white">Shop vitals</a>
+        <a href="/collections/all" class="header-nav__item__link animate-white-to-green">Shop vitals</a>
       </div>
       <div class="header-nav__item">
-        <a href="/collections/all" class="header-nav__item__link white">Important bits</a>
+        <a href="/collections/all" class="header-nav__item__link animate-white-to-green">Important bits</a>
       </div>
       <div class="header-nav__item">
-        <a href="/collections/all" class="header-nav__item__link white">About us</a>
+        <a href="/collections/all" class="header-nav__item__link animate-white-to-green">About us</a>
       </div>
     </div>
 
@@ -119,6 +119,34 @@
     </div>
     <div class="mobile-navigation-menu__item">
       <a href="/collections/all" class="mobile-navigation-menu__item__link white">About us</a>
+    </div>
+
+    <div class="mobile-navigation-menu__item mobile-navigation-menu__item--social">
+      <p class="white">Connect with us</p>
+      <a href="/collections/all" class="mobile-navigation-menu__item__icon">
+        <img
+          src="{{ 'facebook.svg' | asset_url }}"
+          width="40"
+          height="40"
+          loading="lazy"
+        >
+      </a>
+      <a href="/collections/all" class="mobile-navigation-menu__item__icon">
+        <img
+          src="{{ 'instagram.svg' | asset_url }}"
+          width="40"
+          height="40"
+          loading="lazy"
+        >
+      </a>
+      <a href="/collections/all" class="mobile-navigation-menu__item__icon">
+        <img
+          src="{{ 'twitter.svg' | asset_url }}"
+          width="40"
+          height="40"
+          loading="lazy"
+        >
+      </a>
     </div>
   </div>
 </div>
