--- a/sections/sidecart.liquid
+++ b/sections/sidecart.liquid
@@ -32,6 +32,11 @@
   <div class="sidecart-draw">
     <div class="sidecart-draw-head">
       <p><span>Your Cart</span></p>
+      <button onclick="document.body.classList.remove('sidecart-visible');">
+        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewbox="0 0 30 30">
+          <path fill-rule="evenodd" d="M29.854 25.3 19.482 14.927 29.854 4.553 25.3 0 14.928 10.374 4.555 0 .002 4.553l10.373 10.374L0 25.3l4.553 4.554L14.928 19.48 25.3 29.854z"/>
+        </svg>
+      </button>
     </div>
     <div class="sidecart-draw-items"></div>
     <div class="sidecart-draw-actions">
