--- a/source/style.scss
+++ b/source/style.scss
@@ -14,6 +14,7 @@ Base includes
 
 @import 'sections/flickity';
 @import 'sections/header';
+@import 'sections/footer';
 @import 'sections/mobile-navigation';
 @import 'sections/announcement';
 @import 'sections/banner';
