--- a/source/sections/mobile-navigation.scss
+++ b/source/sections/mobile-navigation.scss
@@ -23,6 +23,7 @@
         opacity: 0;
         transition: all $fast;
         transform-origin: 0 0;
+        transition-delay: 555ms;
     }
 
     &-menu {
@@ -37,36 +38,65 @@
         padding: 20rem 4rem 8rem;
         overflow: hidden;
 
+        @include media($md, max) {
+            padding: 16rem 2rem 6rem;
+        }
+
         &:before {
             @include pseudo;
             @include full;
+            bottom: 3rem;
             background: var(--blue);
             background: #a5d2d7;
             border-radius: 0 0 5rem 5rem;
             transform: translateY(-5rem);
+            transform: translateY(-60%);
             transition: all $fast;
-            transition-delay: 123ms;
+            transition-delay: 555ms;
             opacity: 0;
+            box-shadow: 0 10px 30px rgba(#000, 0.05);
         }
 
         &__item {
             position: relative;
             z-index: 4;
             opacity: 0;
-            transform: translateY(1rem);
+            transform: translateY(2rem);
             transition: all $fast;
 
             @for $i from 1 through 5 {
                 &:nth-child(#{$i}) {
-                    transition-delay: $i * 60ms;
+                    transition-delay: $i * 100ms;
                 }
             }
 
             &__link {
                 @include bold;
                 display: block;
-                padding: 2rem;
+                padding: 2rem 0;
                 font-size: 6rem;
+
+                @include media($md, max) {
+                    font-size: 4rem;
+                    text-align: center;
+                }
+            }
+
+            &--social {
+                padding: 2rem 0;
+
+                @include media($md, max) {
+                    text-align: center;
+                }
+            }
+
+            &__icon {
+                img {
+                    width: 6rem;
+                    height: 6rem;
+                    filter: invert(1);
+                    margin-right: 2rem;
+                }
             }
         }
     }
@@ -95,6 +125,7 @@
         &-background {
             pointer-events: all;
             opacity: 1;
+            transition-delay: 0ms;
         }
 
         &-menu {
