--- a/source/sections/sidecart.scss
+++ b/source/sections/sidecart.scss
@@ -21,7 +21,9 @@
             @include full;
             background-image: radial-gradient(var(--green) 0.5px, transparent 0.5px), radial-gradient(var(--green) 0.5px, var(--off-white) 0.5px);
             background-size: 20px 20px;
-            background-position: 0 0, 10px 10px;
+            background-position:
+                0 0,
+                10px 10px;
             opacity: 0.4;
         }
 
@@ -60,7 +62,48 @@
         transform-origin: 100% 100%;
 
         &-head {
-            padding: 0 2rem 2rem;
+            padding: 1rem 2rem 2rem;
+
+            p {
+                margin: 0;
+                position: relative;
+
+                &:before {
+                    @include pseudo;
+                    height: 1px;
+                    background: var(--off-white);
+                    width: 100%;
+                    top: 50%;
+                    left: 0;
+                }
+
+                span {
+                    position: relative;
+                    background: white;
+                    padding-right: 2rem;
+                    z-index: 2;
+                }
+            }
+
+            button {
+                background: white;
+                border: 0;
+                position: absolute;
+                top: 1rem;
+                right: 2rem;
+                cursor: pointer;
+                z-index: 4;
+                padding-left: 2rem;
+
+                svg {
+                    width: 2.4rem;
+                    height: 2.4rem;
+
+                    path {
+                        fill: var(--green);
+                    }
+                }
+            }
         }
         &-items {
         }
