--- a/source/utilities/fonts.scss
+++ b/source/utilities/fonts.scss
@@ -165,13 +165,17 @@ $link: var(--green);
 a.link,
 a:not([class]) {
   text-decoration: none;
-  box-shadow: inset 0 -1px 0 $link, 0 1px 0 $link;
+  box-shadow:
+    inset 0 -1px 0 $link,
+    0 1px 0 $link;
   transition: all 333ms ease;
   overflow: hidden;
   color: var(--green);
 
   &:hover {
-    box-shadow: inset 0 -30px 0 $link, 0 1px 0 $link;
+    box-shadow:
+      inset 0 -30px 0 $link,
+      0 1px 0 $link;
     color: white !important;
   }
 }
@@ -206,4 +210,32 @@ a:not([class]) {
 
 .colour--primary {
   color: var(--green);
+}
+
+.animate-white-to-green {
+  transition: all $fast;
+  background-image: linear-gradient(90deg, var(--green) 50%, white 50%);
+  background-position: 100%;
+  background-size: 200% 100%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  &:hover {
+    background-position: 0;
+  }
+}
+
+.animate-white-to-transparent-white {
+  transition: all $fast;
+  background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.5) 50%, white 50%);
+  background-position: 100%;
+  background-size: 200% 100%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  &:hover {
+    background-position: 0;
+  }
 }
