--- a/source/sections/collections.scss
+++ b/source/sections/collections.scss
@@ -2,6 +2,7 @@
     position: relative;
     background: #e1edf9;
     padding-bottom: 4rem;
+    overflow: hidden;
 
     &__grid {
         display: flex;
@@ -13,6 +14,16 @@
         position: relative;
         width: 25%;
         cursor: pointer;
+
+        @include media($md, max) {
+            width: 50%;
+            @include aspect(2, 1);
+        }
+
+        @include media($xs, max) {
+            @include aspect(3, 1);
+            width: 100%;
+        }
 
         &__image {
             @include full;
@@ -82,6 +93,21 @@
                 display: flex;
                 align-content: center;
 
+                @include media($lg, max) {
+                    padding: 2rem;
+                    width: 38%;
+                }
+
+                @include media($xmd, max) {
+                    width: 50%;
+                }
+
+                @include media($md, max) {
+                    width: 55%;
+                    padding-left: 0;
+                    padding-right: 0;
+                }
+
                 h2,
                 p {
                     color: var(--green);
@@ -92,6 +118,19 @@
                 padding: 4rem;
                 width: 28%;
                 max-width: 50rem;
+
+                @include media($lg, max) {
+                    padding: 2rem;
+                    width: 38%;
+                }
+
+                @include media($xmd, max) {
+                    width: 50%;
+                }
+
+                @include media($md, max) {
+                    width: 80%;
+                }
 
                 h6,
                 p {
