--- a/source/sections/footer.scss
+++ b/source/sections/footer.scss
@@ -2,6 +2,13 @@
     position: relative;
     background: var(--green);
 
+    &-logo {
+        @include media($sm, max) {
+            position: absolute;
+            bottom: 4rem;
+        }
+    }
+
     &-wrap {
         padding: 6rem 4rem;
         display: flex;
@@ -16,6 +23,10 @@
         @include media($lg, max) {
             padding: 4rem 2rem;
         }
+
+        @include media($sm, max) {
+            padding-bottom: 10rem;
+        }
     }
 
     &-column {
@@ -26,15 +37,72 @@
 
         &--1 {
             width: 20%;
+
+            @include media($lg, max) {
+                width: 33.33333%;
+            }
+
+            @include media($md, max) {
+                width: 50%;
+                margin-bottom: 4rem;
+            }
+
+            @include media($sm, max) {
+                width: 100%;
+                margin-bottom: 4rem;
+            }
         }
         &--2 {
             width: 20%;
+
+            @include media($lg, max) {
+                width: 33.33333%;
+            }
+
+            @include media($md, max) {
+                width: 50%;
+                margin-bottom: 4rem;
+            }
+
+            @include media($sm, max) {
+                width: 100%;
+                margin-bottom: 4rem;
+            }
         }
         &--3 {
             width: 20%;
+
+            @include media($lg, max) {
+                width: 33.33333%;
+            }
+
+            @include media($md, max) {
+                width: 50%;
+                margin-bottom: 4rem;
+            }
+
+            @include media($sm, max) {
+                width: 100%;
+                margin-bottom: 4rem;
+            }
         }
         &--4 {
             width: 40%;
+
+            @include media($lg, max) {
+                margin-top: 3rem;
+                width: 100%;
+            }
+
+            @include media($md, max) {
+                width: 50%;
+                margin-bottom: 4rem;
+            }
+
+            @include media($sm, max) {
+                width: 100%;
+                margin-bottom: 4rem;
+            }
         }
     }
 
@@ -44,7 +112,44 @@
             display: inline-block;
 
             img {
-                filter: brightness(2);
+                filter: invert(1);
+            }
+        }
+    }
+
+    &-newsletter {
+        margin-bottom: 1rem;
+        position: relative;
+        width: 100%;
+
+        &__field {
+            margin-bottom: 1rem;
+            position: relative;
+
+            &__input {
+                width: 100%;
+                position: relative;
+                font-size: 1.6rem;
+                color: white;
+                background: transparent;
+                border: 0;
+                color: white;
+                border-bottom: 1px solid rgba(white, 0.5);
+                padding: 1rem 0;
+                outline: 0;
+
+                @include placeholder {
+                    color: rgba(white, 0.8);
+                }
+            }
+
+            &__button {
+                position: absolute;
+                right: 0;
+                bottom: 1rem;
+                border: 0;
+                background: transparent;
+                color: white;
             }
         }
     }
