--- a/source/sections/mobile-navigation.scss
+++ b/source/sections/mobile-navigation.scss
@@ -6,8 +6,8 @@
     bottom: 0;
     z-index: 2;
     overflow: hidden;
-    // visibility: hidden;
-    // opacity: 0;
+    visibility: hidden;
+    opacity: 0;
     transition: all $faster;
 
     &-background {
