--- a/source/utilities/fonts.scss
+++ b/source/utilities/fonts.scss
@@ -239,3 +239,18 @@ a:not([class]) {
     background-position: 0;
   }
 }
+
+.underline {
+  position: relative;
+  display: inline-block;
+
+  &:after {
+    @include pseudo;
+    width: 100%;
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(255, 255, 255, 0.5);
+  }
+}
