--- a/source/style.scss
+++ b/source/style.scss
@@ -22,3 +22,5 @@ Base includes
 @import 'sections/search';
 @import 'sections/grid';
 @import 'sections/collections';
+@import 'sections/hero';
+@import 'sections/instagram';
