--- a/source/sections/mobile-navigation.scss
+++ b/source/sections/mobile-navigation.scss
@@ -63,6 +63,7 @@
             opacity: 0;
             transform: translateY(2rem);
             transition: all $fast;
+            display: block;
 
             @for $i from 1 through 5 {
                 &:nth-child(#{$i}) {
@@ -72,7 +73,8 @@
 
             &__link {
                 @include bold;
-                display: block;
+                display: inline-block;
+
                 padding: 2rem 0;
                 font-size: 6rem;
 
