--- a/source/style.scss
+++ b/source/style.scss
@@ -18,9 +18,11 @@ Base includes
 @import 'sections/mobile-navigation';
 @import 'sections/announcement';
 @import 'sections/banner';
+@import 'sections/banner-blog';
 @import 'sections/sidecart';
 @import 'sections/search';
 @import 'sections/grid';
 @import 'sections/collections';
 @import 'sections/hero';
 @import 'sections/instagram';
+@import 'sections/blog'; 
