--- a/source/style.scss
+++ b/source/style.scss
@@ -25,4 +25,5 @@ Base includes
 @import 'sections/collections';
 @import 'sections/hero';
 @import 'sections/instagram';
-@import 'sections/blog'; 
+@import 'sections/blog';
+@import 'sections/related-articles';
