--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -76,7 +76,7 @@
         /* Colours */
         --white: #ffffff;
         --off-white: #F3F2F1;
-        --off-white: #F3F2F1;
+        --grey-light: #BABABA;
         --black: #000000;
         --yellow-light: #FFEFB1;
         --pink-light: #F7D8DF;
