--- a/sections/main-blog.liquid
+++ b/sections/main-blog.liquid
@@ -1,1 +1,137 @@
-<h1>Main Blog</h1>
+{% for article in blogs.news.articles %}
+  {% if forloop.last == true %}
+    <div class="banner-blog">
+      <div class="banner-blog-wrap">
+        <div class="banner-blog-text">
+          <div class="banner-blog-text__constraint">
+            <h6 class="white">
+              <b>{{ article.tags }}</b>
+            </h6>
+            <h1 class="white">
+              <b>
+                {{ article.title }}
+              </b>
+            </h1>
+            <p class="white">{{ article.excerpt }}</p>
+          </div>
+        </div>
+
+        <div class="banner-blog-image">
+          <img
+            src="{{ article.image | image_url: width: 640, height: 480 }}"
+            alt="grid item image"
+            loading="lazy"
+            width="640"
+            height="480"
+          >
+          <div class="banner-blog-image__shadow"></div>
+        </div>
+      </div>
+    </div>
+  {% endif %}
+{% endfor %}
+
+{% comment %}
+  Related articles
+{% endcomment %}
+
+<div class="articles">
+  {% comment %}
+    Wave top left
+  {% endcomment %}
+  <div class="articles-wave1 [ js-wave ]">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1366 768">
+      <path d="M0,32L48,74.7C96,117,192,203,288,245.3C384,288,480,288,576,266.7C672,245,768,203,864,176C960,149,1056,139,1152,149.3C1248,160,1344,192,1392,208L1440,224L1440,320" stroke-width="1" stroke="red" fill-opacity="0"/>
+    </svg>
+  </div>
+
+  {% comment %}
+    Wave top left
+  {% endcomment %}
+  <div class="articles-wave2 [ js-wave ]">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1366 768">
+      <path d="M0,32L48,74.7C96,117,192,203,288,245.3C384,288,480,288,576,266.7C672,245,768,203,864,176C960,149,1056,139,1152,149.3C1248,160,1344,192,1392,208L1440,224L1440,320" stroke-width="3" stroke="red" fill-opacity="0"/>
+    </svg>
+  </div>
+
+  {% comment %}
+    Intro
+  {% endcomment %}
+  <div class="articles-filters">
+    <p class="colour--green">
+      <a href="#" class="button wide" data-filter="All" onclick="event.preventDefault();window.filterArticles('All')"
+        >All</a
+      >
+      {% for tag in blogs.news.tags %}
+        <a
+          href="#"
+          class="button wide"
+          data-filter="{{ tag }}"
+          onclick="event.preventDefault();window.filterArticles('{{ tag }}')"
+        >
+          {{- tag -}}
+        </a>
+      {% endfor %}
+    </p>
+  </div>
+
+  {% comment %}
+    Intro
+  {% endcomment %}
+  <div class="articles-grid">
+    {% for article in blog.articles %}
+      <a href="{{ article.link }}" class="articles-grid__item" data-tags="{{ article.tags }}">
+        <div class="articles-grid__item__image">
+          <img
+            src="{{ article.image | image_url: width: 640, height: 480 }}"
+            alt="grid item image"
+            loading="lazy"
+            width="640"
+            height="480"
+          >
+        </div>
+
+        <div class="articles-grid__item__content">
+          <h6>
+            <b>{{ article.tags }}</b>
+          </h6>
+          <h4 class="colour--green">
+            <b>
+              {{ article.title }}
+            </b>
+          </h4>
+          <p>{{ article.excerpt }}</p>
+          <p>
+            <span class="arrow-link">Read now</span>
+          </p>
+        </div>
+      </a>
+    {% endfor %}
+  </div>
+
+  <script>
+    function filterArticles(tag) {
+        
+      var articles = document.querySelectorAll('.articles-grid__item');
+      var filters = document.querySelectorAll('.articles-filters .button');
+
+      filters.forEach(function (filter) {
+        filter.dataset.filter === tag ? filter.classList.add('active') : filter.classList.remove('active');
+      });
+
+      if (tag === 'All') {
+        articles.forEach(function (article) {
+          article.style.display = 'block';
+        });
+      } else {
+        articles.forEach(function (article) {
+          if (article.dataset.tags.includes(tag)) {
+            article.style.display = 'block';
+          } else {
+            article.style.display = 'none';
+          }
+        });
+      }
+    }
+  </script>
+</div>
